[project]
name = "seal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "more-itertools>=10.7.0",
    "protobuf>=6.31.1",
    "psutil>=7.0.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
